[package]
name = "klingel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "multipart"] }
fastrand = "2.0.1"
rodio = "0.17.3"
tokio = { version = "1.33.0", features = ["full"] }
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
